[package]
name = "clash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.27.2"
egui_extras = "0.27.2"
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
rand = "0.8.5"
